virt/krun-sys/include/libkrun.h


#define KRUN_TSI_HIJACK_INET  (1 << 0)
#define KRUN_TSI_HIJACK_UNIX  (1 << 1)
int32_t krun_add_vsock(uint32_t ctx_id, uint32_t tsi_features);
int32_t krun_get_shutdown_eventfd(uint32_t ctx_id);
int32_t krun_set_console_output(uint32_t ctx_id, const char *c_filepath);
int32_t krun_setuid(uint32_t ctx_id, uid_t uid);
int32_t krun_setgid(uint32_t ctx_id, gid_t gid);
int32_t krun_set_nested_virt(uint32_t ctx_id, bool enabled);
int32_t krun_check_nested_virt(void);
int32_t krun_has_feature(uint64_t feature);
int32_t krun_get_max_vcpus(void);
int32_t krun_split_irqchip(uint32_t ctx_id, bool enable);
int32_t krun_disable_implicit_console(uint32_t ctx_id);
int32_t krun_disable_implicit_init(uint32_t ctx_id);
int32_t krun_get_default_init(const uint8_t **data_out, size_t *len_out);
int32_t krun_fs_add_overlay_file(uint32_t ctx_id, const char *fs_tag,
                                 const char *path, const uint8_t *data,
                                 size_t data_len, uint32_t mode, bool one_shot);
int32_t krun_fs_add_overlay_dir(uint32_t ctx_id, const char *fs_tag,
                                const char *path, uint32_t mode);
int32_t krun_disable_implicit_vsock(uint32_t ctx_id);
int32_t krun_set_kernel_console(uint32_t ctx_id, const char *console_id);
int32_t krun_add_virtio_console_default(uint32_t ctx_id,
                                      int input_fd,
                                      int output_fd,
                                      int err_fd);
int32_t krun_add_serial_console_default(uint32_t ctx_id,
                                      int input_fd,
                                      int output_fd);
int32_t krun_add_virtio_console_multiport(uint32_t ctx_id);
int32_t krun_add_console_port_tty(uint32_t ctx_id,
                                   uint32_t console_id,
                                   const char *name,
                                   int tty_fd);
int32_t krun_add_console_port_inout(uint32_t ctx_id,
                                     uint32_t console_id,
                                     const char *name,
                                     int input_fd,
                                     int output_fd);
int32_t krun_set_root_disk_remount(uint32_t ctx_id, const char *device, const char *fstype, const char *options);
int32_t krun_start_enter(uint32_t ctx_id);