virt/krun-sys/src/bindings.rs

unsafe extern "C" {
    #[doc = " Add a vsock device with specified TSI features.\n\n By default, libkrun creates a vsock device implicitly with TSI hijacking\n enabled based on heuristics. To use this function, you must first call\n krun_disable_implicit_vsock() to disable the implicit vsock device.\n\n Currently only one vsock device is supported. Calling this function\n multiple times will return an error.\n\n Arguments:\n  \"ctx_id\"       - the configuration context ID.\n  \"tsi_features\" - bitmask of TSI features (KRUN_TSI_HIJACK_INET, KRUN_TSI_HIJACK_UNIX)\n                   Use 0 to add vsock without any TSI hijacking.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_add_vsock(ctx_id: u32, tsi_features: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Returns the eventfd file descriptor to signal the guest to shut down orderly. This must be\n called before starting the microVM with \"krun_start_event\". Only available in libkrun-efi.\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n\n Returns:\n  The eventfd file descriptor or a negative error number on failure."]
    pub fn krun_get_shutdown_eventfd(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures the console device to ignore stdin and write the output to \"c_filepath\".\n\n Arguments:\n  \"ctx_id\"    - the configuration context ID.\n  \"filepath\"  - a null-terminated string representing the path of the file to write the\n                console output.\n\n Notes:\n  This API only applies to the implicitly created console. If the implicit console is\n  disabled via `krun_disable_implicit_console` the operation is a NOOP. Additionally,\n  this API does not have any effect on consoles created via the `krun_add_*_console_default`\n  APIs."]
    pub fn krun_set_console_output(ctx_id: u32, c_filepath: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures uid which is set right before the microVM is started.\n\n This is useful for example when you want to access host block devices\n from the microVM which requires root privileges when opening the device\n but you don't want to run the whole microVM as root.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"uid\"            - a user id to be set.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_setuid(ctx_id: u32, uid: uid_t) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures gid which is set right before the microVM is started.\n\n This is useful for example when you want to access host block devices\n from the microVM which requires root privileges when opening the device\n but you don't want to run the whole microVM as root.\n\n Arguments:\n  \"ctx_id\"         - the configuration context ID.\n  \"gid\"            - a group id to be set.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_setgid(ctx_id: u32, gid: gid_t) -> i32;
}
unsafe extern "C" {
    #[doc = " Configures the microVM to support Nested Virtualization\n\n Arguments:\n  \"ctx_id\"  - the configuration context ID.\n  \"enabled\" - true to enable Nested Virtualization in the microVM.\n\n Returns:\n  Zero on success or a negative error number on failure. Success doesn't imply that\n  Nested Virtualization is supported on the system, only that it's going to be requested\n  when the microVM is created after calling \"krun_start_enter\"."]
    pub fn krun_set_nested_virt(ctx_id: u32, enabled: bool) -> i32;
}
unsafe extern "C" {
    #[doc = " Check the system if Nested Virtualization is supported\n\n Returns:\n  - 1 : Success and Nested Virtualization is supported\n  - 0 : Success and Nested Virtualization is not supported\n  - <0: Failure"]
    pub fn krun_check_nested_virt() -> i32;
}
unsafe extern "C" {
    #[doc = " Checks if a specific feature was enabled at build time.\n\n Arguments:\n  \"feature\" - one of the KRUN_FEATURE_* constants.\n\n Returns:\n  1 if the feature is supported, 0 if not supported, or a negative error\n  number on failure (e.g., -EINVAL for invalid/unknown feature constant).\n\n Notes:\n  When linking against an older version of libkrun, this function may\n  return -EINVAL for feature constants that were added in newer versions."]
    pub fn krun_has_feature(feature: u64) -> i32;
}
unsafe extern "C" {
    #[doc = " Get the maximum number of vCPUs supported by the hypervisor.\n\n Returns:\n  The maximum number of vCPUs that can be created, or a negative error number on failure."]
    pub fn krun_get_max_vcpus() -> i32;
}
unsafe extern "C" {
    #[doc = " Specify whether to split IRQCHIP responsibilities between the host and the guest.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n  \"enable\" - whether to enable the split IRQCHIP\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_split_irqchip(ctx_id: u32, enable: bool) -> i32;
}
unsafe extern "C" {
    pub fn krun_disable_implicit_console(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    pub fn krun_disable_implicit_init(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    pub fn krun_get_default_init(data_out: *mut *const u8, len_out: *mut usize) -> i32;
}
unsafe extern "C" {
    pub fn krun_fs_add_overlay_file(
        ctx_id: u32,
        fs_tag: *const ::core::ffi::c_char,
        path: *const ::core::ffi::c_char,
        data: *const u8,
        data_len: usize,
        mode: u32,
        one_shot: bool,
    ) -> i32;
}
unsafe extern "C" {
    pub fn krun_fs_add_overlay_dir(
        ctx_id: u32,
        fs_tag: *const ::core::ffi::c_char,
        path: *const ::core::ffi::c_char,
        mode: u32,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Disable the implicit vsock device.\n\n By default, libkrun creates a vsock device automatically. This function\n disables that behavior entirely - no vsock device will be created.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n\n Returns:\n  Zero on success or a negative error number on failure."]
    pub fn krun_disable_implicit_vsock(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    pub fn krun_set_kernel_console(ctx_id: u32, console_id: *const ::core::ffi::c_char) -> i32;
}
unsafe extern "C" {
    pub fn krun_add_virtio_console_default(
        ctx_id: u32,
        input_fd: ::core::ffi::c_int,
        output_fd: ::core::ffi::c_int,
        err_fd: ::core::ffi::c_int,
    ) -> i32;
}
unsafe extern "C" {
    pub fn krun_add_serial_console_default(
        ctx_id: u32,
        input_fd: ::core::ffi::c_int,
        output_fd: ::core::ffi::c_int,
    ) -> i32;
}
unsafe extern "C" {
    pub fn krun_add_virtio_console_multiport(ctx_id: u32) -> i32;
}
unsafe extern "C" {
    pub fn krun_add_console_port_tty(
        ctx_id: u32,
        console_id: u32,
        name: *const ::core::ffi::c_char,
        tty_fd: ::core::ffi::c_int,
    ) -> i32;
}
unsafe extern "C" {
    pub fn krun_add_console_port_inout(
        ctx_id: u32,
        console_id: u32,
        name: *const ::core::ffi::c_char,
        input_fd: ::core::ffi::c_int,
        output_fd: ::core::ffi::c_int,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Configure block device to be used as root filesystem.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n  \"device\" - a null-terminated string specifying the root device\n             (e.g. \"/dev/vda1\", must refer to a previously configured block device)\n  \"fstype\" - a null-terminated string specifying the filesystem type (e.g. \"ext4\", can be set to \"auto\" or NULL)\n  \"options\" - a null-terminated string with a comma-separated list of mount options (can be NULL)\n\n Notes:\n  This function can be used if you want a root filesystem backed by a block device instead of a virtiofs path.\n  Because libkrun uses its own built-in init process (implemented as a virtual file in the virtiofs driver),\n  you'd normally have to copy the executable into every filesystem image (or partition) you intend to boot from.\n  This is obviously difficult to maintain, so instead we can create a dummy virtiofs root behind the scenes,\n  execute init from it as usual and then switch to the actual root configured by this function."]
    pub fn krun_set_root_disk_remount(
        ctx_id: u32,
        device: *const ::core::ffi::c_char,
        fstype: *const ::core::ffi::c_char,
        options: *const ::core::ffi::c_char,
    ) -> i32;
}
unsafe extern "C" {
    #[doc = " Starts and enters the microVM with the configured parameters. The VMM will attempt to take over\n stdin/stdout to manage them on behalf of the process running inside the isolated environment,\n simulating that the latter has direct control of the terminal.\n\n This function consumes the configuration pointed by the context ID.\n\n Arguments:\n  \"ctx_id\" - the configuration context ID.\n\n Notes:\n  This function only returns if an error happens before starting the microVM. Otherwise, the\n  VMM assumes it has full control of the process, and will call to exit() with the workload's exit\n  code once the microVM shuts down. If an error occurred before running the workload the process\n  will exit() with an error exit code.\n\n Error exit codes:\n  125     - \"init\" cannot set up the environment inside the microVM.\n  126     - \"init\" can find the executable to be run inside the microVM but cannot execute it.\n  127     - \"init\" cannot find the executable to be run inside the microVM.\n\n Returns:\n  -EINVAL - The VMM has detected an error in the microVM configuration."]
    pub fn krun_start_enter(ctx_id: u32) -> i32;
}
